...
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/login_mail"
                android:hint="E-Mail"
                android:layout_gravity="center"
                android:singleLine="true"
                android:alpha="0.54"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_marginBottom="10dp"
                android:id="@+id/login_password"
                android:hint="Password"
                android:layout_gravity="center"
                android:singleLine="true"
                android:alpha="0.54"/>

            <Button
                android:text="Login"
                android:layout_width="wrap_content"
                android:id="@+id/btn_login"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="btn_login"
                android:alpha="0.54" />
...
