<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="de.ticket_match.ticketmatch.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:layout_above="@+id/footer"
            android:layout_below="@+id/header"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/myprofile_image"
                    android:scaleType="fitCenter"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:onClick="btn_myprofile_image"
                    android:background="@null"
                    android:layout_margin="10dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:text="Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/myprofile_name"
                        android:layout_margin="1dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:alpha="0.87" />

                    <TextView
                        android:text="Gender and Age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/myprofile_gender_age"
                        android:layout_margin="1dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:alpha="0.87"/>

                    <TextView
                        android:text="Location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/myprofile_location"
                        android:layout_margin="1dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:alpha="0.87"/>


                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/myprofile_rating"
                        android:rating="0"
                        android:stepSize="0.5"
                        android:numStars="5"
                        android:isIndicator="true"
                        android:progressTint="@color/colorAccent"
                        android:secondaryProgressTint="@android:color/darker_gray"
                        android:progressBackgroundTint="@android:color/darker_gray"
                        android:alpha="0.87"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#aaaaaa"
                android:layout_gravity="center"
                android:alpha="0.12"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
ese
            <TextView
                android:text="Interests"
                android:id="@+id/interests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#2196F3"
                android:textStyle="normal|bold"
                android:alpha="0.87"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/myprofile_interests"
                android:layout_weight="1"
                android:alpha="0.87"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#aaaaaa"
                android:layout_gravity="center"
                android:alpha="0.12"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"

            >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Interest"
                android:ems="10"
                android:id="@+id/newinterest_text"
                android:layout_weight="1"
                android:alpha="0.54"
                />

            <ImageButton
            android:background="@drawable/ic_add_circle_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:onClick="btn_newinterest"
                android:id="@+id/btn_newinterest" />
        </LinearLayout>

        </LinearLayout>

</android.widget.RelativeLayout>
