<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listitem_interests"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:gravity="left"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
       android:layout_margin="10dp"
       android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:id="@+id/listitem_text"
/>



    <ImageButton
        android:background="@drawable/ic_delete_black_24dp"
        android:id="@+id/listitem_interests_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:onClick="btn_listitem_delete"
        android:gravity="right" />


</LinearLayout>