...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="Your Message"
                android:ems="10"
                android:layout_gravity="bottom"
                android:id="@+id/messageInput"
                android:layout_weight="1"
                android:alpha="0.54"
                />

           <!-- <Button
                android:text="Send"
...
                android:layout_height="wrap_content"
                android:id="@+id/send_message"
                android:alpha="0.54"
                android:onClick="btn_send_message"
                />-->
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_send_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_send_white_24dp"
...
