...
        android:orientation="vertical"
        >

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/messages_list"
            />

    </LinearLayout>

    </android.widget.RelativeLayout>

...
